<resources>
    <!--My profile activity-->
    <string name="app_name">HomeWork_1</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="log_out_button_my_profile">Log out</string>
    <string name="settings_text_my_profile">Settings</string>
    <string name="career_text_my_profile">Career</string>
    <string name="home_address_text_my_profile">Home address</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="view_my_contacts_button">VIEW MY CONTACTS</string>
    <string name="name_text_my_profile">name</string>

    <!--Auth activity-->
    <string name="mainText_authActivity">Let\'s get acquainted</string>
    <string name="secondaryText_authActivity">Fill out the profile and go to the application!</string>
    <string name="e_mail_text_auth_activity">E-mail</string>
    <string name="password_text_auth_activity">Password</string>
    <string name="remember_me_checkbox_auth_activity">Remember me</string>
    <string name="google_button">GOOGLE</string>
    <string name="or_text_auth_activity">or</string>
    <string name="register_button_auth_activity">Register</string>
    <string name="terms_and_conditions_auth_activity">By clicking register you agree to our Terms\n and Conditions</string>
    <string name="already_have_an_account_auth_activity">Already have an account?</string>
    <string name="sign_in_auth_activity">Sign in</string>
    <string name="email_error">Incorrect E-Mail address</string>
    <string name="password_error">Your password could include a minimum 8 characters</string>

    <!--My contacts activity-->
    <string name="contacts_my_contacts_activity">Contacts</string>
    <string name="add_contacts_my_contacts_activity">Add contacts</string>

    <!--Contacts item-->
    <string name="name_surname_contacts_item">Name Surname</string>
    <string name="career_contacts_item">Career</string>
</resources>