<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".AuthActivity.AuthActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_mainText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_padding"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/mainText_authActivity"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/main_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_secondaryText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_main_text_and_secondary_text"
        android:text="@string/secondaryText_authActivity"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/secondary_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_Email"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_secondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/email_top_margin"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/e_mail_text_auth_activity"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/email_password_remember_me_text_size"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_TextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_Email" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_TextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_medium"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_EmailError"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_TextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/email_error"
        android:textColor="@color/error"
        app:fontFamily="@font/open_sans_medium"
        android:visibility="gone"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_password"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_EmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_top_margin"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/password_text_auth_activity"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/email_password_remember_me_text_size"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_TextPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_medium"
            android:inputType="textPassword"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/secondary_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_PasswordError"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_TextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/password_error"
        android:textColor="@color/error"
        app:fontFamily="@font/open_sans_medium"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox_rememberMe"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_PasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/remember_me_checkbox_auth_activity"
        android:textSize="@dimen/email_password_remember_me_text_size"
        android:textColor="@color/secondary_text"
        android:buttonTint="@color/checkbox"
        android:button="@drawable/custom_checkbox" />

    <View
        android:id="@+id/view_google_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/flow_google_button"
        app:layout_constraintBottom_toBottomOf="@id/flow_google_button"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:background="@drawable/google_button_background">
    </View>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_google_background"
        android:layout_width="@dimen/google_ImageView_w_h"
        android:layout_height="@dimen/google_ImageView_w_h"
        android:src="@drawable/google" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:letterSpacing="0.15"
        android:text="@string/google_button"
        android:textColor="@color/black"
        android:textSize="@dimen/buttons_text_size"
        android:textStyle="bold"
        android:paddingVertical="@dimen/google_vertical_padding"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/checkBox_rememberMe"
        android:layout_marginTop="@dimen/google_button_top_margin"
        app:constraint_referenced_ids="imageView_google_background,text_google"
        app:flow_horizontalAlign="center"
        app:flow_horizontalGap="@dimen/google_button_horizontal_gap"
        app:flow_horizontalStyle="packed"
        app:flow_verticalAlign="center" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_or"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/flow_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/or_top_margin"
        android:text="@string/or_text_auth_activity"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/or_text_Size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_button_top_margin"
        android:background="@drawable/register_button"
        android:fontFamily="@font/open_sans_medium"
        android:letterSpacing="0.15"
        android:minHeight="@dimen/register_button_min_h"
        android:text="@string/register_button_auth_activity"
        android:textColor="@color/button_register_text"
        android:textSize="@dimen/buttons_text_size"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_or" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_terms_and_conditions"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/button_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/terms_and_conditions_top_margin"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/terms_and_conditions_auth_activity"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/terms_and_conditions_text_size"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_already_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/text_signIn"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_terms_and_conditions"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/already_have_an_acc_sign_in_left_and_right_margin"
        android:layout_marginTop="@dimen/already_have_an_acc_sign_in_top_margin"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/already_have_an_account_auth_activity"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:textSize="@dimen/already_have_an_acc_sign_in_text_size"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_signIn"
        app:layout_constraintBottom_toBottomOf="@+id/text_already_have_an_account"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/text_already_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/text_already_have_an_account"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/already_have_an_acc_sign_in_left_and_right_margin"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/sign_in_auth_activity"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="@dimen/already_have_an_acc_sign_in_text_size"/>


</androidx.constraintlayout.widget.ConstraintLayout>