<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfileActivity.MyProfileActivity">

    <View
        android:id="@+id/view_top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/secondary_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatText_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settingsText_marginStart"
        android:layout_marginTop="@dimen/settingsText_marginTop"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/settings_text_my_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/settingsText_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton_logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/logOutButton_marginEnd"
        android:background="@drawable/log_out_transparent_button"
        android:fontFamily="@font/open_sans_medium"
        android:minHeight="@dimen/logOutButton_minHeight"
        android:text="@string/log_out_button_my_profile"
        android:textAllCaps="false"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/logOutButton_textSize"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatText_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatText_settings" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImage_profileImage"
        android:layout_width="@dimen/profileImage_w_h"
        android:layout_height="@dimen/profileImage_w_h"
        android:layout_marginTop="@dimen/profileImage_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton_logOut"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@mipmap/my_photo"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/name_marginTop"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/name_text_my_profile"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/name_textSize"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImage_profileImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/shapeableImage_profileImage"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImage_profileImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatText_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/career_marginTop"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/career_text_my_profile"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/career_textSize"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImage_profileImage"
        app:layout_constraintStart_toStartOf="@+id/shapeableImage_profileImage"
        app:layout_constraintTop_toBottomOf="@+id/appCompatText_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatText_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/homeAddress_marginTop"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/home_address_text_my_profile"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/homeAddress_textSize"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImage_profileImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/shapeableImage_profileImage"
        app:layout_constraintTop_toBottomOf="@+id/appCompatText_career" />

    <View
        android:id="@+id/view_leftSocialNetworksCircle"
        android:layout_width="@dimen/socialNetworkCircle_w_h"
        android:layout_height="@dimen/socialNetworkCircle_w_h"
        android:background="@drawable/border_social_network"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton_editProfile"
        app:layout_constraintEnd_toStartOf="@+id/view_middleSocialNetworksCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_bottom_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/AppCompatImage_facebookIcon"
        android:layout_width="@dimen/facebookIcon_w_h"
        android:layout_height="@dimen/facebookIcon_w_h"
        app:layout_constraintBottom_toBottomOf="@id/view_leftSocialNetworksCircle"
        app:layout_constraintEnd_toEndOf="@id/view_leftSocialNetworksCircle"
        app:layout_constraintStart_toStartOf="@id/view_leftSocialNetworksCircle"
        app:layout_constraintTop_toTopOf="@id/view_leftSocialNetworksCircle"
        app:srcCompat="@drawable/facebook_icon"
        app:tint="@color/socialNetwork_circle" />

    <View
        android:id="@+id/view_middleSocialNetworksCircle"
        android:layout_width="@dimen/socialNetworkCircle_w_h"
        android:layout_height="@dimen/socialNetworkCircle_w_h"
        android:background="@drawable/border_social_network"
        app:layout_constraintBottom_toBottomOf="@+id/view_leftSocialNetworksCircle"
        app:layout_constraintEnd_toStartOf="@+id/view_rightSocialNetvorksCircle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_leftSocialNetworksCircle"
        app:layout_constraintTop_toTopOf="@+id/view_leftSocialNetworksCircle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/AppCompatImage_linkedinIcon"
        android:layout_width="@dimen/inIcon_w_h"
        android:layout_height="@dimen/inIcon_w_h"
        app:layout_constraintBottom_toBottomOf="@id/view_middleSocialNetworksCircle"
        app:layout_constraintEnd_toEndOf="@id/view_middleSocialNetworksCircle"
        app:layout_constraintStart_toStartOf="@id/view_middleSocialNetworksCircle"
        app:layout_constraintTop_toTopOf="@id/view_middleSocialNetworksCircle"
        app:srcCompat="@drawable/in_icon"
        app:tint="@color/socialNetwork_circle" />

    <View
        android:id="@+id/view_rightSocialNetvorksCircle"
        android:layout_width="@dimen/socialNetworkCircle_w_h"
        android:layout_height="@dimen/socialNetworkCircle_w_h"
        android:background="@drawable/border_social_network"
        app:layout_constraintBottom_toBottomOf="@+id/view_leftSocialNetworksCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_middleSocialNetworksCircle"
        app:layout_constraintTop_toTopOf="@+id/view_leftSocialNetworksCircle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/AppCompatImage_instagramIcon"
        android:layout_width="@dimen/instagramIcon_w_h"
        android:layout_height="@dimen/instagramIcon_w_h"
        app:layout_constraintBottom_toBottomOf="@id/view_rightSocialNetvorksCircle"
        app:layout_constraintEnd_toEndOf="@id/view_rightSocialNetvorksCircle"
        app:layout_constraintStart_toStartOf="@id/view_rightSocialNetvorksCircle"
        app:layout_constraintTop_toTopOf="@id/view_rightSocialNetvorksCircle"
        app:srcCompat="@drawable/instagram_icon"
        app:tint="@color/socialNetwork_circle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton_editProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/editProfileButton_margin_bottom"
        android:background="@drawable/transparent_black_button"
        android:fontFamily="@font/open_sans_medium"
        android:minHeight="@dimen/editProfileButton_min_height"
        android:text="@string/edit_profile_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImage_viewContacts"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImage_viewContacts"
        app:layout_constraintStart_toStartOf="@+id/appCompatImage_viewContacts" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatImage_viewContacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewMyContactsButton_margin_start_end"
        android:layout_marginEnd="@dimen/viewMyContactsButton_margin_start_end"
        android:layout_marginBottom="@dimen/viewMyContactsButton_margin_bottom"
        android:background="@drawable/button_view_my_contacts"
        android:letterSpacing="0.15"
        android:minHeight="@dimen/viewMyContactsButton_min_height"
        android:text="@string/view_my_contacts_button"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/viewMyContactsButton_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>